# ACAProject2022-2023

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile-template.mk
kernels/: CMakeLists.txt  Makefile
kernels/cuda/: Makefile
kernels/cuda/bp/: Makefile
kernels/cuda/bp/src/: gpu_sar_backprojection.cu  sar_backprojection.h  sar_kernel3_driver.c
kernels/cuda/lib/: Makefile  sar_params.h  sar_utils.c
kernels/cuda/pfa-interp1/: Makefile
kernels/cuda/pfa-interp1/src/: gpu_sar_interp1.cu  sar_interp1.h  sar_kernel1_driver.c
kernels/cuda/pfa-interp2/: Makefile
kernels/cuda/pfa-interp2/src/: gpu_sar_interp2.cu  sar_interp2.h  sar_kernel2_driver.c
kernels/omp/: Makefile
kernels/omp/bp/: Makefile
kernels/omp/bp/src/: sar_backprojection.c  sar_backprojection.h  sar_kernel3_driver.c
kernels/omp/lib/: Makefile  sar_utils.c  sar_utils.h
kernels/omp/pfa-interp1/: Makefile
kernels/omp/pfa-interp1/src/: sar_interp1.c  sar_interp1.h  sar_kernel1_driver.c
kernels/omp/pfa-interp2/: Makefile
kernels/omp/pfa-interp2/src/: sar_interp2.c  sar_interp2.h  sar_kernel2_driver.c
kernels/ser/: CMakeLists.txt
kernels/ser/bp/: CMakeLists.txt  Makefile
kernels/ser/bp/src/: sar_backprojection.c  sar_backprojection.cpp  sar_backprojection.h  sar_kernel3_driver.c  sar_kernel3_driver.cpp
kernels/ser/lib/: CMakeLists.txt  Makefile
kernels/ser/pfa-interp1/: Makefile
kernels/ser/pfa-interp1/src/: sar_kernel1_driver.c
kernels/ser/pfa-interp2/: Makefile  sar-pfa-interp2
lib/: CMakeLists.txt  Makefile
